@@ -3,6 +3,7 @@ package com.richard.config;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -15,35 +16,41 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(securedEnabled = true)
 public class AppConfig {
     
     private final String jwtSecretKey;
+    private final String servletContextPath;
     
-    public AppConfig(@Value("${jwt.secret.key}") String jwtSecretKey) {
+    public AppConfig(
+            @Value("${jwt.secret.key}") String jwtSecretKey,
+            @Value("${server.servlet.context-path}") String servletContextPath) {
         this.jwtSecretKey = jwtSecretKey;
+        this.servletContextPath = servletContextPath;
     }
     
     /**
      * Configures the security filter chain for the application.
      *
-     * @param  http  the HttpSecurity object to configure
-     * @return       the SecurityFilterChain object
-     * @throws Exception  if an error occurs during configuration
+     * @param http the HttpSecurity object to configure
+     * @return the SecurityFilterChain object
+     * @throws Exception if an error occurs during configuration
      */
     @Bean
     SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         
         http.sessionManagement(management -> management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(authorize -> authorize
-                                                        .requestMatchers("/api/admin/**").hasAnyRole("RESTAURANT_OWNER", "ADMIN")
-                                                        .requestMatchers("/api/**").authenticated()
-                                                        .anyRequest().permitAll()
-                                  )
+            .authorizeHttpRequests(authorize -> authorize.requestMatchers(servletContextPath + "/admin/**")
+                                                         .hasAnyRole("RESTAURANT_OWNER", "ADMIN")
+                                                         .requestMatchers(servletContextPath + "/**")
+                                                         .authenticated()
+                                                         .anyRequest()
+                                                         .permitAll())
             .addFilterBefore(new JwtTokenValidator(jwtSecretKey), BasicAuthenticationFilter.class)
             .csrf(AbstractHttpConfigurer::disable)
             .cors(cors -> cors.configurationSource(corsConfigurationSource()));
@@ -52,19 +59,16 @@ public class AppConfig {
     }
     
     /**
-     * Returns a CorsConfigurationSource object that specifies the allowed origins, methods, headers, credentials, and max age for CORS
-     * requests.
+     * Returns a CorsConfigurationSource object that specifies the allowed origins, methods, headers, credentials, and max age for
+     * CORS requests.
      *
      * @return a CorsConfigurationSource object with the specified configuration
      */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000",
-                "http://localhost:8080"
-                                                     ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:8080"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Collections.singletonList("*"));
         configuration.setExposedHeaders(Collections.singletonList("Authorization"));
         configuration.setAllowCredentials(true);
